welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: not found: value d
var sumc= c+d
            ^blueTicket:7: error: value || is not a member of Int
if (suma=10 || sumb=10 || sumc=10) return 10;  
            ^blueTicket:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (suma=10 || sumb=10 || sumc=10) return 10;  
        ^blueTicket:8: error: value || is not a member of Int
if (suma=sumb+10 ||suma=sumc+10) return 5;
                 ^blueTicket:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (suma=sumb+10 ||suma=sumc+10) return 5;
        ^